--- a/pages/wrangler.toml
+++ b/pages/wrangler.toml
@@ -1,8 +1,8 @@
-name = "temp-email-pages"
+name = "yifcc_email"
 pages_build_output_dir = "../frontend/dist"
 compatibility_date = "2024-05-13"
 
 [[services]]
 binding = "BACKEND"
-service = "cloudflare_temp_email"
+service = "yifcc_email"
 environment = "production"
